deploy/kubernetes/apis4smartcontracts-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apis4smartcontractsservice
  namespace: apis4smartcontracts
spec:
  ports:
  - name: http
    targetPort: 3000
    port: 3000
  selector:
    app: apis4smartcontracts
    microservice: app
