deploy/kubernetes/apis4smartcontracts-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apis4smartcontractsingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
  namespace: apis4smartcontracts      
spec:
  rules:
  - host:
    http:
      paths:
      - path: /apis4smartcontracts
        backend:
          serviceName: apis4smartcontractsservice
          servicePort: http
